--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -49,7 +49,7 @@
       href: functions-cli-samples.md
 - name: Koncept
   items:
-    - name: Förbruknings- och App Service-planer
+    - name: Jämförelse av värdplaner
       href: functions-scale.md
     - name: Utlösare och bindningar
       href: functions-triggers-bindings.md
