--- a/articles/container-service/dcos-swarm/TOC.yml
+++ b/articles/container-service/dcos-swarm/TOC.yml
@@ -27,6 +27,8 @@
       href: container-service-security.md
 - name: Instruktionsguider
   items:
+    - name: Skapa ett ACS-kluster
+      href: container-service-create-acs-cluster-cli.md
     - name: Anslut med ett ACS-kluster
       href: container-service-connect.md
     - name: Skala ett ACS-kluster
@@ -65,12 +67,14 @@
           href: container-service-docker-swarm.md
         - name: Kontinuerlig integrering och kontinuerlig leverans (CI/CD) med Docker Swarm och VSTS
           href: container-service-docker-swarm-setup-ci-cd.md
+        - name: CI/CD med Docker Swarm (ACS-motor) och VSTS
+          href: container-service-docker-swarm-mode-setup-ci-cd-acs-engine.md
 - name: Referens
   items:
     - name: Azure CLI 2.0
       href: /cli/azure/acs
     - name: REST
-      href: /rest/api/compute/containerservices
+      href: /rest/api/container-services
 - name: Resurser
   items:
     - name: Azure-översikt
