--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -24,6 +24,8 @@
   items:
     - name: Dirigera Blob Storage-händelser
       href: ../storage/blobs/storage-blob-event-quickstart.md?toc=%2fazure%2fevent-grid%2ftoc.json
+    - name: Strömma data från Event Hubs till informationslager
+      href: event-grid-event-hubs-integration.md
 - name: Referens
   items:
     - name: REST
