--- a/articles/event-grid/index.yml
+++ b/articles/event-grid/index.yml
@@ -41,6 +41,8 @@ sections:
         style: cards
         className: cardsD
         items:
+          - title: Kommandorad
+            html: <p><a href="/cli/azure/eventgrid">Azure CLI</a></p>
           - title: 'REST API:er'
             html: <p><a href="/rest/api/eventgrid">REST</a></p>
           - title: Scheman
