--- a/articles/event-grid/toc.yml
+++ b/articles/event-grid/toc.yml
@@ -28,6 +28,8 @@
       href: event-grid-event-hubs-integration.md
 - name: Referens
   items:
+    - name: Azure CLI
+      href: /cli/azure/eventgrid
     - name: REST
       href: /rest/api/eventgrid
     - name: Prenumerationsschema
