--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -22,6 +22,8 @@
           href: storage-python-how-to-use-queue-storage.md
         - name: Ruby
           href: storage-ruby-how-to-use-queue-storage.md
+        - name: PowerShell
+          href: storage-powershell-how-to-use-queues.md
 - name: Gör så här för att
   items:
     - name: Planera och designa
