--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -103,6 +103,8 @@
           href: ../app-service/app-service-export-api-to-powerapps-and-flow.md?toc=%2fazure%2fazure-functions%2ftoc.json
         - name: Anropa en funktion från PowerApps
           href: functions-powerapps-scenario.md
+        - name: Använd en hanterad tjänstidentitet
+          href: ../app-service/app-service-managed-service-identity.md?toc=%2fazure%2fazure-functions%2ftoc.json
 - name: Referens
   items:
     - name: Bindningar
@@ -147,6 +149,8 @@
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Regional tillgänglighet
       href: 'https://azure.microsoft.com/regions/services/'
+    - name: Videoklipp
+      href: 'https://www.youtube.com/c/AzureFunctions'
     - name: MSDN-forum
       href: 'https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureFunctions'
     - name: Stack Overflow
