--- a/articles/service-fabric/index.yml
+++ b/articles/service-fabric/index.yml
@@ -26,9 +26,17 @@ sections:
         style: icon48
         items:
           - image:
-              src: 'https://docs.microsoft.com/en-us/azure/app-service-web/media/index/logo_net.svg'
+              src: 'https://docs.microsoft.com/azure/app-service-web/media/index/logo_net.svg'
             text: .NET
-            href: 'https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-quickstart-dotnet'
+            href: service-fabric-quickstart-dotnet
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_linux.svg'
+            text: Linux-behållare
+            href: service-fabric-quickstart-containers-linux
+          - image:
+              src: 'https://docs.microsoft.com/media/logos/logo_Windows.svg'
+            text: Windows-behållare
+            href: service-fabric-quickstart-containers
   - title: Steg för steg-självstudier
     items:
       - type: paragraph
@@ -47,25 +55,43 @@ sections:
           - title: Utveckla med .NET
             href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7'
             image:
-              src: 'https://docs.microsoft.com/en-us/media/logos/logo_pluralsight.svg'
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
               href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7'
           - title: Molnmönster och -arkitektur
             href: 'https://www.pluralsight.com/courses/microsoft-azure-dotnet-cloud-architecture?twoid=FEED65A23CB221A7'
             image:
-              src: 'https://docs.microsoft.com/en-us/media/logos/logo_pluralsight.svg'
+              src: 'https://docs.microsoft.com/media/logos/logo_pluralsight.svg'
               href: 'https://www.pluralsight.com/courses/microsoft-azure-dotnet-cloud-architecture?twoid=FEED65A23CB221A7'
+          - title: Varför ska jag använda Azure Service Fabric?
+            href: 'https://www.pluralsight.com/courses/developing-dotnet-microsoft-azure-getting-started?twoid=FEED65A23CB221A7'
+            image:
+              src: 'https://docs.microsoft.com/media/logos/logo_lynda.com.svg'
+              href: 'https://www.lynda.com/Azure-tutorials/Why-Azure-Service-Fabric/573134/590379-4.html'
+  - title: Koncept
+    items:
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="service-fabric-overview-microservices">Förstå mikrotjänster</a>
+          - html: <a href="service-fabric-content-roadmap">Helhetsbild</a>
+          - html: <a href="service-fabric-application-scenarios">Programscenarier</a>
+          - html: <a href="service-fabric-patterns-and-scenarios">Mönster och scenarier</a>
+          - html: <a href="service-fabric-architecture">Arkitektur</a>
+          - html: <a href="service-fabric-technical-overview">Terminologi</a>
   - title: Exempel
     items:
+      - type: paragraph
+        text: 'Hitta skript för vanliga hanteringsuppgifter:'
       - type: list
         style: cards
         className: cardsD
         items:
           - title: Skriptexempel
-            html: <p><a href="service-fabric-powershell-samples">Azure PowerShell</a></p>
+            html: <p><a href="service-fabric-powershell-samples">Azure PowerShell</a></p><p><a href="samples-cli">Service Fabric CLI</a></p>
           - title: .NET
-            html: '<p><a href="https://azure.microsoft.com/en-us/resources/samples/service-fabric-dotnet-getting-started/">Komma igång</a></p><p><a href="https://github.com/Azure-Samples/service-fabric-dotnet-quickstart">Röstning</a></p><p><a href="https://azure.microsoft.com/en-us/resources/samples/service-fabric-dotnet-web-reference-app/">Webbreferens</a></p><p><a href="https://azure.microsoft.com/en-us/resources/samples/service-fabric-dotnet-iot/">IoT</a></p><p><a href="https://azure.microsoft.com/en-us/resources/samples/service-fabric-watchdog-service/">Watchdog</a></p>'
+            html: '<p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-getting-started/">Komma igång</a></p><p><a href="https://github.com/Azure-Samples/service-fabric-dotnet-quickstart">Röstning</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-web-reference-app/">Webbreferens</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-dotnet-iot/">IoT</a></p><p><a href="https://azure.microsoft.com/resources/samples/service-fabric-watchdog-service/">Watchdog</a></p>'
           - title: Java
-            html: '<p><a href="https://azure.microsoft.com/en-us/resources/samples/service-fabric-java-getting-started/">Komma igång</a></p>'
+            html: '<p><a href="https://azure.microsoft.com/resources/samples/service-fabric-java-getting-started/">Komma igång</a></p>'
   - title: Referens
     items:
       - type: list
