--- a/articles/virtual-machines/linux/toc.yml
+++ b/articles/virtual-machines/linux/toc.yml
@@ -57,60 +57,35 @@
       href: powershell-samples.md
 - name: Koncept
   items:
-    - name: Azure-godkända distributioner
-      href: endorsed-distros.md
+    - name: Azure Resource Manager
+      href: ../../azure-resource-manager/resource-group-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
     - name: Regioner och tillgänglighet
       href: regions-and-availability.md
+    - name: VM-typer och storlekar
+      href: sizes.md
+    - name: Godkända distributioner
+      href: endorsed-distros.md
+    - name: Underhåll och uppdateringar
+      href: maintenance-and-updates.md
     - name: Lagring
       href: azure-vm-storage-overview.md
     - name: Nätverk
-      href: azure-vm-network-overview.md
-    - name: Skalningsuppsättning för virtuella datorer
-      href: ../../virtual-machine-scale-sets/virtual-machine-scale-sets-overview.md
-    - name: Behållare
-      href: containers.md
-    - name: Resource Manager
-      href: ../../azure-resource-manager/resource-group-overview.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-      items:
-        - name: Distributionsmodeller
-          href: ../../azure-resource-manager/resource-manager-deployment-model.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-        - name: Mallar för virtuella datorer
-          href: ../windows/template-description.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - name: Azure Linux-agent
-      href: agent-user-guide.md
-    - name: Azure Security Center
-      href: ../../security-center/security-center-linux-virtual-machine.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - name: Haveriberedskap
-      href: ../virtual-machines-disaster-recovery-guidance.md?toc=%2fazure%2fvirtual-machines%2flinux%2ftoc.json
-    - name: Planerat underhåll
-      href: planned-maintenance.md
-    - name: VM-storlekar
-      items:
-        - name: Översikt över VM-storlekar
-          href: sizes.md
-          items:
-            - name: Generellt syfte
-              href: sizes-general.md
-            - name: Beräkningsoptimerad
-              href: sizes-compute.md
-            - name: Minnesoptimerad
-              href: sizes-memory.md
-            - name: Lagringsoptimerad
-              href: sizes-storage.md
-            - name: GPU
-              href: sizes-gpu.md
-              items:
-                - name: GPU-drivrutiner
-                  href: n-series-driver-setup.md
-            - name: Databehandling med höga prestanda
-              href: sizes-hpc.md
-        - name: Azure-beräkningsenheter (ACU)
-          href: acu.md
-        - name: Beräkna benchmark-poäng
-          href: compute-benchmark-scores.md
+      href: network-overview.md
+    - name: Skala program automatiskt
+      href: autoscale.md
+    - name: Infrastruktur för automatisering
+      href: infrastructure-automation.md
+    - name: Säkerhet och principer
+      href: security-policy.md
+    - name: Övervakning
+      href: monitor.md
+    - name: Säkerhetskopiering och återställning
+      href: backup-recovery.md
+    - name: Beräkning med höga prestanda
+      href: high-performance-computing.md
     - name: Distributionsöverväganden
       items:
-        - name: Exempel på en grundläggande distribution
+        - name: Riktlinjer för infrastruktur
           href: infrastructure-example.md
 - name: Instruktionsguider
   items:
